Handle written location from web messenger

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 APP_SECRET=YOUR_APP_SECRET
 ACCESS_TOKEN=YOUR_ACCESS_TOKEN
 VERIFY_TOKEN=YOUR_VERIFY_TOKEN
+GOOGLE_MAP_API_KEY=YOUR_GOOGLE_MAP_API_KEY
